Fixed styles on mobile devices

--- a/static/src/style/responsive.styl
+++ b/static/src/style/responsive.styl
@@ -88,6 +88,10 @@
 }
 
 @media (max-width: 606px) {
+  .content {
+    top: 24px;
+  }
+
   .stats-panel {
     bottom: 164px;
   }
